# RaiderEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CPPGameEngine.sln  LICENSE.md  RaiderEngine.sln  ReadMe.md
CPPGameEngine/: CPPGameEngine.vcxproj  CPPGameEngine.vcxproj.filters  Cog.hpp  FlickerLight.hpp  FpsDisplay.hpp  GameObject.h  GameObject.hpp  GameObjectRegistry.h  GameObjectRegistry.hpp  Light.h  Light.hpp  MovingPlatform.h  MovingPlatform.hpp  ObjectRegistry.hpp  Player.hpp  PlayerSpawn.hpp  TextObject.cpp  TextObject.h  TextObject.hpp  alHelpers.c  assimpFlags.hpp  audio.hpp  camera.h  camera.hpp  debugLineShader.fs  debugLineShader.vs  deferred_shading.fs  demo.cpp  filesystem.hpp  g_buffer.fs  g_buffer.vs  glad.c  graphics.hpp  input.hpp  inputUtils.h  inputUtils.hpp  installInstructions.txt  kineCon.cpp  kineCon.h  kineConInter.h  (+18 more)
CPPGameEngine/demo/: Cog.hpp  FlickerLight.hpp  MovingPlatform.hpp  demo.cpp  mouseInteraction.hpp
LearnOpenGL exercises/Basic-Lighting/: 2.2.basic_lighting.fs  main.cpp
LearnOpenGL exercises/Camera/: camera.h  main.cpp
LearnOpenGL exercises/Coordinate-Systems/: main.cpp
LearnOpenGL exercises/Hello-Triangle/: main.cpp
LearnOpenGL exercises/Light-Casters/: camera.h  main.cpp
LearnOpenGL exercises/Lighting-Maps/: 4.2.lighting_maps.fs  main.cpp
LearnOpenGL exercises/Shaders/: 3.3.shader.fs  3.3.shader.vs  main.cpp  shader_s.h
LearnOpenGL exercises/Textures/: 4.2.texture.fs  main.cpp
LearnOpenGL exercises/Transformations/: main.cpp
RaiderEngine/: CMakeLists.txt  Collider2D.cpp  Collider2D.hpp  Collider2DCircle.cpp  Collider2DCircle.hpp  Collider2DLine.cpp  Collider2DLine.hpp  Collider2DPolygon.cpp  Collider2DPolygon.hpp  Collider2DRectangle.cpp  Collider2DRectangle.hpp  FpsDisplay.cpp  FpsDisplay.hpp  GameObject.cpp  GameObject.hpp  GameObject2D.cpp  GameObject2D.hpp  Light.cpp  Light.hpp  ObjectRegistry.hpp  ObjectRegistryBase.cpp  ObjectRegistryBase.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleEmitter2D.cpp  ParticleEmitter2D.hpp  Player.hpp  PlayerBase.cpp  PlayerBase.hpp  PlayerSpawn.cpp  PlayerSpawn.hpp  RaiderEngine.vcxproj  RaiderEngine.vcxproj.filters  TextObject.cpp  TextObject.hpp  Tilemap.cpp  Tilemap.hpp  alHelpers.cpp  alHelpers.hpp  assimpFlags.hpp  (+33 more)
RaiderEngine/demo/: Cog.hpp  Compass.hpp  (+6 more)
RaiderEngine/libs/PhysX-4.1/: CMakeLists.txt
RaiderEngine/libs/PhysX-4.1/physx/source/physxcharacterkinematic/src/: CctCharacterController.cpp
maxscripts/: randomizeBooks.ms
src/: CPPGameEngine.cpp  glad.c
(+152 files in other folders)
